log
Thu 28 Mar 2024 09:10:15 PM UTC: 
 tests:  0|6
total_score: 0/70
94dac12
Fri 29 Mar 2024 05:27:52 PM UTC: 
 list.c | 4 ++++
 1 file changed, 4 insertions(+)
 tests:  0|6
total_score: 0/70
0d8073d
Fri 29 Mar 2024 06:15:46 PM UTC: 
 list.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  1|5
total_score: 10/70
0c1e115
Fri 29 Mar 2024 06:20:09 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  1|0
   [ INFO ] llamando a firstList
cc4b470
Fri 29 Mar 2024 06:20:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
d2eca2f
Fri 29 Mar 2024 06:23:01 PM UTC: 
 list.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:10: error: ‘current’ undeclared (first use in this function); did you mean ‘popCurrent’?
   49 |   return current -> next -> dato;
      |          ^~~~~~~
      |          popCurrent
list.c:49:10: note: each undeclared identifier is reported only once for each function it appears in
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
cb156b0
Fri 29 Mar 2024 06:23:26 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘nextList’:
list.c:49:37: error: ‘Node’ has no member named ‘dato’; did you mean ‘data’?
   49 |   return list -> current -> next -> dato;
      |                                     ^~~~
      |                                     data
list.c:50:1: error: control reaches end of non-void function [-Werror=return-type]
   50 | }
      | ^
cc1: all warnings being treated as errors
Compilation failed
04ebd4e
Fri 29 Mar 2024 06:23:32 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 15/70
c6513a4
Fri 29 Mar 2024 06:23:57 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
b588d00
Fri 29 Mar 2024 06:26:42 PM UTC: 
 list.c | 2 ++
 1 file changed, 2 insertions(+)
 tests:  0|0
143379f
Fri 29 Mar 2024 06:34:41 PM UTC: 
 list.c | 7 ++++---
 1 file changed, 4 insertions(+), 3 deletions(-)
 tests:  0|0
3cd6ac3
Fri 29 Mar 2024 06:36:06 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
949400f
Fri 29 Mar 2024 06:36:35 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  5|4
total_score: 25/70
4193235
Fri 29 Mar 2024 06:37:37 PM UTC: 
 list.c | 4 ++--
 1 file changed, 2 insertions(+), 2 deletions(-)
 tests:  5|4
total_score: 25/70
fc5b5a3
Fri 29 Mar 2024 06:40:26 PM UTC: 
 list.c | 6 +++++-
 1 file changed, 5 insertions(+), 1 deletion(-)
 tests:  6|4
total_score: 25/70
cef98d5
Fri 29 Mar 2024 08:41:54 PM UTC: 
 list.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:64:14: error: ‘NUll’ undeclared (first use in this function); did you mean ‘NULL’?
   64 |   if(list == NUll || list -> current == NULL || list -> current -> prev == NULL) return NUll;
      |              ^~~~
      |              NULL
list.c:64:14: note: each undeclared identifier is reported only once for each function it appears in
list.c:66:3: error: statement with no effect [-Werror=unused-value]
   66 |   list current = list -> current -> prev;
      |   ^~~~
list.c:66:7: error: expected ‘;’ before ‘current’
   66 |   list current = list -> current -> prev;
      |       ^~~~~~~~
      |       ;
cc1: all warnings being treated as errors
Compilation failed
57179eb
Fri 29 Mar 2024 08:42:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘prevList’:
list.c:64:14: error: ‘NUll’ undeclared (first use in this function); did you mean ‘NULL’?
   64 |   if(list == NUll || list -> current == NULL || list -> current -> prev == NULL) return NUll;
      |              ^~~~
      |              NULL
list.c:64:14: note: each undeclared identifier is reported only once for each function it appears in
Compilation failed
425e9d4
Fri 29 Mar 2024 08:42:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|3
total_score: 35/70
851951d
Fri 29 Mar 2024 08:58:11 PM UTC: 
 list.c | 5 +++++
 1 file changed, 5 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:72:35: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   72 |   if(list -> head == NULL) return NULL;
      |                                   ^~~~
list.c:70:6: note: declared here
   70 | void pushFront(List * list, void * data){
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
879a549
Fri 29 Mar 2024 08:58:30 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:72:51: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   72 |   if(list == NULL || list -> head == NULL) return NULL;
      |                                                   ^~~~
list.c:70:6: note: declared here
   70 | void pushFront(List * list, void * data){
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7aa9589
Fri 29 Mar 2024 08:59:07 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushFront’:
list.c:72:28: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   72 |   if(list == NULL ) return NULL;
      |                            ^~~~
list.c:70:6: note: declared here
   70 | void pushFront(List * list, void * data){
      |      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
8cb64da
Fri 29 Mar 2024 08:59:24 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
16678fe
Fri 29 Mar 2024 08:59:50 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  9|0
   [ INFO ] Insertando 4 a la lista (pushfront)
ee313e8
Fri 29 Mar 2024 09:01:52 PM UTC: 
 list.c | 7 ++++++-
 1 file changed, 6 insertions(+), 1 deletion(-)
 tests:  10|2
total_score: 45/70
258893e
Fri 29 Mar 2024 10:05:47 PM UTC: 
 list.c | 17 +++++++++++++++++
 1 file changed, 17 insertions(+)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:89:3: error: unknown type name ‘Nodo’; did you mean ‘Node’?
   89 |   Nodo* newNodo = createNode(data);
      |   ^~~~
      |   Node
list.c:89:19: error: initialization of ‘int *’ from incompatible pointer type ‘Node *’ [-Werror=incompatible-pointer-types]
   89 |   Nodo* newNodo = createNode(data);
      |                   ^~~~~~~~~~
list.c:90:54: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   90 |   if(list == NULL || list -> current == NULL) return 0;
      |                                                      ^
list.c:88:6: note: declared here
   88 | void pushCurrent(List * list, void * data) {
      |      ^~~~~~~~~~~
list.c:92:11: error: request for member ‘next’ in something not a structure or union
   92 |   newNodo -> next = list -> current -> next;
      |           ^~
list.c:93:11: error: request for member ‘prev’ in something not a structure or union
   93 |   newNodo -> prev = list -> current;
      |           ^~
list.c:97:18: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
   97 |     list -> tail = newNodo;
      |                  ^
list.c:101:37: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
  101 |     list -> current -> next -> prev = newNodo;
      |                                     ^
list.c:103:27: error: assignment to ‘Node *’ from incompatible pointer type ‘int *’ [-Werror=incompatible-pointer-types]
  103 |   list -> current -> next = newNodo;
      |                           ^
cc1: all warnings being treated as errors
Compilation failed
6b83d01
Fri 29 Mar 2024 10:06:31 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
list.c: In function ‘pushCurrent’:
list.c:90:54: error: ‘return’ with a value, in function returning void [-Werror=return-type]
   90 |   if(list == NULL || list -> current == NULL) return 0;
      |                                                      ^
list.c:88:6: note: declared here
   88 | void pushCurrent(List * list, void * data) {
      |      ^~~~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
7ec3266
Fri 29 Mar 2024 10:06:48 PM UTC: 
 list.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  11|1
total_score: 55/70
9d34e6b
